--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,7 @@
         android:id="@+id/btnAddItem"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:onClick="onAddItem"
-        android:editable="true"/>
+        android:onClick="onAddItem"/>
 
     <ListView
         android:layout_width="wrap_content"
