--- a/app/src/main/res/layout/edit_item.xml
+++ b/app/src/main/res/layout/edit_item.xml
@@ -23,9 +23,7 @@
             android:layout_height="wrap_content"
             android:text="Cancel"
             android:id="@+id/cancelButton"
-            android:layout_weight="1"
-            android:nestedScrollingEnabled="true"
-            android:onClick="onClickCancel" />
+            android:layout_weight="1" />
 
         <Button
             android:layout_width="wrap_content"
