Added theme: MyTheme.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.richellerazon.simpletodo.MainActivity">
+    tools:context="com.example.richellerazon.simpletodo.MainActivity"
+    style="@style/MyTheme">
 
     <Button
         android:layout_width="wrap_content"
@@ -24,7 +25,9 @@
         android:id="@+id/lvItems"
         android:layout_alignParentTop="true"
         android:layout_alignEnd="@+id/btnAddItem"
-        android:layout_above="@+id/btnAddItem" />
+        android:layout_above="@+id/btnAddItem"
+        style="@style/MyListViewStyle"
+        />
 
     <EditText
         android:layout_width="wrap_content"
@@ -34,6 +37,6 @@
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/btnAddItem"
         android:layout_alignTop="@+id/btnAddItem"
-        android:hint="@string/enter_input_text" />
+        android:hint="@string/enter_input_text"/>
 
 </RelativeLayout>
